--- a/unique/src/unbase/config
+++ b/unique/src/unbase/config
@@ -10,4 +10,6 @@
 
 unbase.state=enable
 
-unbase.L.l += dl pthread z #bz2
+linux-gcc.unbase.L.opts += $(shell pkg-config --libs lua5.1 toluaxx5.1)
+linux-gcc.unbase.L.l += c dl pthread z bz2
+
