--- a/unique/src/unmath/config
+++ b/unique/src/unmath/config
@@ -3,11 +3,9 @@
 #
 unmath.state=enable
 
-ifeq ($(PLATFORM),linux)
-  unmath.C.I = /usr/include/GL
-  unmath.L.l = GL GLU
-else
-  unmath.L.l = opengl32 glu32
-endif
+linux-gcc.unmath.C.I = /usr/include/GL
+linux-gcc.unmath.L.l = GL GLU
+
+win32-mingw.unmath.L.l = opengl32 glu32
 
 unmath.dep = unbase
