Added test script trunable.lua and smallest changes in make files.

--- a/unique/Makefile
+++ b/unique/Makefile
@@ -201,7 +201,7 @@ monolith.clean: $(T.clean)
 runable.target=$(call L.RO,$(T.NAME))
 $(runable.target): $(T.obj)
 	@$(call U.EH,Build $(T.NAME) module)
-	@$(call U.EX,$(call L.XX,$^,$@,$(L.OPTS) $(T.L.opts)))
+	@$(call U.EX,$(call L.RX,$^,$@,$(L.OPTS) $(T.L.opts)))
 runable.build: $(runable.target)
 	@$(call U.EH,Build runable complete....)
 runable.clean: $(T.clean)
