--- a/unique/src/monolith/config
+++ b/unique/src/monolith/config
@@ -5,16 +5,22 @@ monolith.design = option
 
 monolith.dep = $(T.target)
 
-m.suf=);
-m.pre=\nUNMODULE(
+monolith.m.suf=);
+monolith.m.pre=\nUNMODULE(
 
-$(call C.S,monolith,main): $(call C.H,monolith,modules)
+monolith.moddef=$(call C.H,monolith,modules)
 
-$(call C.H,monolith,modules): 
-	@$(call U.EX,$(call U.RM,$@))
+$(call C.S,monolith,main): $(monolith.moddef)
+
+prepare.monolith: $(monolith.moddef)
+
+preclean.monolith:
+	@$(call U.EH,Clean modules define $(monolith.moddef))
+	@$(call U.EX,$(call U.RM,$(monolith.moddef)))
+
+$(monolith.moddef): 
+	@$(call U.EH,Generate modules define $@)
 	@$(call U.EX,$(call U.EF,/*,$@))
 	@$(call U.EX,$(call U.EF, * Automatic generated modules define header,$@))
 	@$(call U.EX,$(call U.EF, */,$@))
-	@$(call U.EX,$(call U.EF,$(addsuffix $(m.suf),$(addprefix $(m.pre),$(monolith.dep))),$@))
-
-.PHONY: $(call C.H,monolith,modules)
+	@$(call U.EX,$(call U.EF,$(addsuffix $(monolith.m.suf),$(addprefix $(monolith.m.pre),$(monolith.dep))),$@))
