--- a/unique/src/unbase/config
+++ b/unique/src/unbase/config
@@ -12,5 +12,7 @@ unbase.state=enable
 
 linux-gcc.unbase.C.flags += $(shell pkg-config --cflags lua5.1 toluaxx5.1)
 linux-gcc.unbase.L.opts += $(shell pkg-config --libs lua5.1 toluaxx5.1)
-linux-gcc.unbase.L.l += c dl
+#linux-gcc.unbase.L.l += c dl
 
+linux-mingw.unbase.C.flags += $(shell pkg-config --cflags lua5.1 toluaxx5.1)
+linux-mingw.unbase.L.l += lua51 toluaxx51
