--- a/unique/src/unoal/config
+++ b/unique/src/unoal/config
@@ -1,7 +1,8 @@
 #
 #  Audio library build config
 #
-unoal.state = enable
+
+#unoal.state = enable
 unoal.dep = unbase
 
 linux-gcc.unoal.C.I += /usr/include/AL
