--- a/unique/src/unmath/config
+++ b/unique/src/unmath/config
@@ -1,11 +1,12 @@
 #
 #  Math3d library build config
 #
+
 unmath.state = enable
 
---linux-gcc.unmath.C.I = /usr/include/GL
---linux-gcc.unmath.L.l = GL GLU
+##linux-gcc.unmath.C.I = /usr/include/GL
+##linux-gcc.unmath.L.l = GL GLU
 
---win32-mingw.unmath.L.l = opengl32 glu32
+##win32-mingw.unmath.L.l = opengl32 glu32
 
 unmath.dep = unbase
