--- a/unique/src/uneff/config
+++ b/unique/src/uneff/config
@@ -2,5 +2,5 @@
 #  Particle system library build config
 #
 
-uneff.state = enable
+uneff.state = disable
 uneff.dep = unbase unmath unogl unvis unobj
